| Summary: | ASTERISK-28647: chan_sip: RTP frames not transmitted after emitting a COLP | ||
| Reporter: | Jean Aunis - Prescom (PrescomJA) | Labels: | |
| Date Opened: | 2019-12-04 08:52:38.000-0600 | Date Closed: | 2019-12-30 15:16:09.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 16.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | After emitting a SIP UPDATE related to a connected line update, chan_sip stops transmitting RTP packets.
Steps to reproduce : - configure a SIP peer with sendrpid=pai - suspend bridge technology native_rtp - call the configured SIP peer, answer and generate a COLP frame At this point, Asterisk stops transmitting audio to the SIP peer until a re-INVITE is performed for some reason (hold for example). I will provide a patch for this. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-12-04 08:52:39.370-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-12-30 15:16:10.643-0600 Change 13524 merged by Friendly Automation: chan_sip: voice frames are no longer transmitted after emitting a COLP [https://gerrit.asterisk.org/c/asterisk/+/13524|https://gerrit.asterisk.org/c/asterisk/+/13524] By: Friendly Automation (friendly-automation) 2019-12-30 15:18:41.469-0600 Change 13367 merged by Friendly Automation: chan_sip: voice frames are no longer transmitted after emitting a COLP [https://gerrit.asterisk.org/c/asterisk/+/13367|https://gerrit.asterisk.org/c/asterisk/+/13367] By: Friendly Automation (friendly-automation) 2019-12-31 08:39:28.345-0600 Change 13525 merged by George Joseph: chan_sip: voice frames are no longer transmitted after emitting a COLP [https://gerrit.asterisk.org/c/asterisk/+/13525|https://gerrit.asterisk.org/c/asterisk/+/13525] By: Friendly Automation (friendly-automation) 2019-12-31 08:39:55.599-0600 Change 13526 merged by George Joseph: chan_sip: voice frames are no longer transmitted after emitting a COLP [https://gerrit.asterisk.org/c/asterisk/+/13526|https://gerrit.asterisk.org/c/asterisk/+/13526] | ||